--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -19,7 +19,7 @@
 	"vars": {
 		"GOOGLE_CLIENT_ID": "YOUR_CLIENT_ID",
 		"GOOGLE_CLIENT_SECRET": "YOUR_CLIENT_SECRET",
-		"REDIRECT_URI": "http://localhost:8787/callback"
+		"LOGOUT_URL": "http://localhost:3000"
 	}
 	/**
 	 * Smart Placement
