--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,16 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm install
-      - name: Set Secrets
-        run: |
-          echo ${{ secrets.GOOGLE_CLIENT_ID }} | npx wrangler secret put GOOGLE_CLIENT_ID
-          echo ${{ secrets.GOOGLE_CLIENT_SECRET }} | npx wrangler secret put GOOGLE_CLIENT_SECRET
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       - name: Publish
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           environment: 'production'
+          secrets: |
+            GOOGLE_CLIENT_ID
+            GOOGLE_CLIENT_SECRET
+        env:
+          GOOGLE_CLIENT_ID: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
